# FakeSniper

./: .gitignore  README.md  docker-compose.yml
Microservice/INTERFACE/: Dockerfile
Microservice/INTERFACE/app/: layout.tsx  page.tsx
Microservice/INTERFACE/app/about/: page.tsx
Microservice/INTERFACE/app/analysis/: page.tsx
Microservice/INTERFACE/app/api/add-target/: route.ts
Microservice/INTERFACE/app/api/check-credentials/: route.ts
Microservice/INTERFACE/app/api/check-status/: route.ts
Microservice/INTERFACE/app/api/get-history/: route.ts
Microservice/INTERFACE/app/api/get-score/: route.ts
Microservice/INTERFACE/app/api/health/: route.ts
Microservice/INTERFACE/app/detailed-results/: page.tsx
Microservice/INTERFACE/app/last-checks/: loading.tsx  page.tsx
Microservice/INTERFACE/app/privacy-policy/: page.tsx
Microservice/INTERFACE/app/terms-conditions/: page.tsx
Microservice/INTERFACE/components/: footer.tsx
Microservice/INTERFACE/hooks/: use-api.ts
Microservice/INTERFACE/lib/: api-config.ts
Microservice/MAIN_GATE/: Dockerfile  go.mod  main.go
Microservice/OPEN_AI_RATE/: Dockerfile  go.mod  main.go
Microservice/SCREENSERV/: Dockerfile  pyproject.toml
Microservice/SCREENSERV/service/: playwright_screenshot_service.py  screenshot_job.py
Microservice/SC_PARSE/: Dockerfile  pyproject.toml
Microservice/SC_PARSE/service/: request_parser.py  summary_job.py
Microservice/SE_SCRAP/: Dockerfile  go.mod  main.go
Microservice/TARGET_SCRAPER/: Dockerfile  README.md  pyproject.toml
Microservice/TARGET_SCRAPER/service/: db_job.py  request_parser.py
(+1 files in other folders)
